--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,7 +32,6 @@ body {
 
 header {
     padding: 1rem;
-    padding-bottom: 0.5rem;
     text-align: center;
 }
 
@@ -144,7 +143,7 @@ ul.gallery li div.label span {
 
 @media screen and (max-width: 1024px) {
     ul.gallery li:not(.large) {
-        flex: 50%;
+        flex: 0 1 calc(50% - 0.35rem);
     }
 }
 
