--- a/public/css/app.css
+++ b/public/css/app.css
@@ -116,10 +116,14 @@ ul.gallery li.large {
     text-align: center;
 }
 
-ul.gallery li img {
-    max-height: 100vh;
-    max-width: 100%;
-    width: auto;
+ul.gallery li picture:not(.published):after {
+    content: "Preview picture, do not publish";
+    position: absolute;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+    font-size: 1.5rem;
+    line-height: 3rem;
+    left: 0;
 }
 
 ul.gallery li div.label {
@@ -155,8 +159,39 @@ ul.gallery li div.label span {
 
 ul.gallery li picture {
     width: 100%;
+    position: relative;
     box-shadow: black 0 0 2rem;
 }
+
+ul.gallery li picture > * {
+    max-height: 100vh;
+    max-width: 100%;
+    width: auto;
+}
+
+ul.gallery li picture.caption {
+    overflow: hidden;
+}
+
+ul.gallery li picture.caption:after {
+    content: "Exclusive picture, visit our Patreon to get access to it";
+    position: absolute;
+    font-size: 1.25rem;
+    bottom: 50vh;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    text-shadow: 0 0 0.5rem black;
+    box-sizing: border-box;
+}
+
+ul.gallery li picture.caption > * {
+    height: 70vh;
+    margin-top: 15vh;
+    margin-bottom: 15vh;
+    filter: blur(1rem);
+}
+
 
 /* Welcome logo */
 ul.logo {
@@ -214,7 +249,7 @@ form.opinion {
     border-radius: 0.3rem;
     padding: 0.5rem;
     box-sizing: border-box;
-    top: -1.5rem;
+    top: -1rem;
     position: relative;
     box-shadow: black 0 0 0.5rem;
     margin-bottom: 1rem;
