--- a/public/css/app.css
+++ b/public/css/app.css
@@ -193,7 +193,7 @@ ul.gallery div.description {
     position: absolute;
     right: 0;
     bottom: 0;
-    margin: 1rem 0.5rem;
+    margin: 1rem;
     text-shadow: black 0 0 1rem, black 0 0 0.25rem;
 }
 
