Another CSS fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -154,7 +154,8 @@ ul.gallery li {
     position: relative;
     min-height: 20rem;
     box-sizing: border-box;
-    margin-bottom: -2px; /* Remove weird margin */
+    margin: -2px; /* Remove weird margin */
+    overflow: hidden;
 }
 
 @media screen and (max-width: 1024px) {
@@ -230,7 +231,6 @@ ul.gallery li video {
 
 ul.gallery li picture > * {
     max-height: 100vh;
-    max-width: calc(100% - 0.25rem);
     min-height: 20rem;
 }
 
