--- a/public/css/app.css
+++ b/public/css/app.css
@@ -249,6 +249,7 @@ ul.gallery li:not(.large) picture > * {
 
 ul.gallery li video {
     margin: 2rem 0;
+    max-width: 100%;
 }
 
 ul.gallery li picture.caption {
