--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,20 +23,36 @@ a:link:hover, a:visited:hover {
 }
 
 body {
-    font-family: 'Forum', cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "Crimson Text";
+
     background-color: #111;
     color: white;
-    max-width: 1480px;
-    font-size: 8px;
-    margin: 0 auto;
+    /*max-width: 1480px;*/
+    /*font-size: 8px;*/
+    /*margin: 0 auto;*/
+}
+
+body.welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    backdrop-filter: blur(1rem) brightness(30%);
+    height: 100vh;
 }
 
 header {
-    padding: 1rem;
+    padding: 1.5rem;
     text-align: center;
 }
 
 header h1 {
+    font-family: "Forum", serif;
     font-size: 2.5rem;
     line-height: 3rem;
 }
@@ -78,9 +94,9 @@ h4 {
 }
 
 footer {
-    padding: 1rem;
+    padding: 2rem;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 /* Article */
@@ -115,173 +131,66 @@ article ul {
 
 p.warning {
     text-align: center;
-    font-size: 1.1rem;
-    line-height: 1.4rem;
-    max-width: 500px;
-    margin: 0 auto;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
     padding: 0 1rem;
 }
 
-.grid {
-    display: flex;
-    flex-flow: row wrap;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1024px;
-    margin: 0.5rem auto;
-}
-
-.grid li {
-    flex: 0 1 25%;
-    display: inline-flex;
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    padding: 0 1rem;
 }
 
 @media screen and (max-width: 800px) {
-    .grid li {
-        flex: 0 1 50%;
+    .gallery {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
-.grid li img {
-    width: 100%;
+@media screen and (min-width: 801px) and (max-width: 1280px) {
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
-ul.gallery {
-    max-width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-ul.gallery li {
-    flex: 0 1 33.33%;
-    display: block;
+.gallery li {
     position: relative;
-    min-height: 20rem;
-    box-sizing: border-box;
-    margin-top: -2px;
-    overflow: hidden;
 }
 
-@media screen and (max-width: 1024px) {
-    ul.gallery li:not(.large) {
-        flex: 0 1 50%;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    ul.gallery li:not(.large) {
-        flex: 0 1 100%;
-    }
-}
-
-ul.gallery li.active:hover {
+.gallery li.active:hover {
     cursor: pointer;
 }
 
-ul.gallery li.large {
-    flex: 0 1 100%;
-    text-align: center;
+.gallery li picture {
+    margin: 0;
+    padding: 0;
 }
 
-ul.gallery li picture:not(.published):after {
-    content: "Preview picture, do not publish";
+.gallery li picture > * {
     width: 100%;
-    background-color:red;
-    opacity: 0.5;
-    font-size: 1.25rem;
-    line-height: 2.5rem;
-    left: 0;
-    top: -4rem;
-    position: absolute;
-}
-
-ul.gallery div.description {
-    font-size: 1rem;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    margin: 1rem;
-    text-shadow: black 0 0 1rem, black 0 0 0.25rem;
-}
-
-ul.gallery li div.label {
-    background-color: rgba(0, 0, 0, 0.75);
+    border-radius: 2px;
     display: block;
+    animation: fadein 0.5s;
+}
+
+.gallery li .label {
     position: absolute;
-    bottom: 3rem;
-    padding: 0.75rem 1rem 0.5rem;
+    bottom: 0.5rem;
+    left: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(0.5rem);
+    padding: 0 1rem;
+    line-height: 2.75rem;
+    border-radius: 2px;
+    font-size: 1.3rem;
+    transition: background-color 0.3s ease;
 }
 
-ul.gallery li div.label h1 {
-    display: inline;
-    font-size: 1.75rem;
-    padding-right: 0.25rem;
+.gallery li.active:hover .label {
+    background-color: rgba(0, 0, 0, 1);
 }
-
-ul.gallery li div.label span {
-    font-size: 1.15rem;
-}
-
-ul.gallery li div.label > * {
-    line-height: 1.5rem;
-}
-
-ul.gallery li picture,
-ul.gallery li video {
-    max-width: 100vw;
-    position: relative;
-    box-shadow: black 0 0 2rem;
-}
-
-ul.gallery li picture > * {
-    max-height: 100vh;
-    max-width: 100vw;
-}
-
-ul.gallery li:not(.large) picture > * {
-    object-fit: cover;
-    width: 100%;
-}
-
-ul.gallery li video {
-    margin: 2rem 0;
-    max-width: 100%;
-}
-
-ul.gallery li picture.caption {
-    overflow: hidden;
-}
-
-ul.gallery li video + .caption {
-    top: 2rem;
-}
-
-ul.gallery li picture.caption:after {
-    content: "Exclusive picture for our Patreons";
-    bottom: 100%;
-}
-
-ul.gallery li video + .caption,
-ul.gallery li picture.caption:after {
-    position: absolute;
-    font-size: 1.25rem;
-    left: 0;
-    width: 100%;
-    padding: 1rem;
-    text-shadow: 0 0 0.5rem black;
-    box-sizing: border-box;
-    min-width: 15rem;
-}
-
-/*ul.gallery li picture.caption > * {
-    height: 70vh;
-    margin-top: 15vh;
-    margin-bottom: 15vh;
-}*/
 
 /* Welcome logo */
 ul.logo {
@@ -292,7 +201,8 @@ ul.logo {
 }
 
 ul.logo.second {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    margin-top: 5rem;
 }
 
 ul.logo li {
@@ -306,6 +216,10 @@ ul.logo li img {
     margin-right: 1rem;
     display: inline-block;
     vertical-align: middle;
+}
+
+ul.logo:not(.second):hover li img {
+    animation: tilt-n-move-shaking 0.25s infinite;
 }
 
 ul.logo.second li img {
@@ -392,4 +306,22 @@ form.opinion input[type=submit] {
 form.opinion p.dlinks {
     padding-top: 0.5rem;
     font-size: 1.25rem;
+}
+
+@keyframes tilt-n-move-shaking {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(5deg); }
+    50% { transform: rotate(0eg); }
+    75% { transform: rotate(-5deg); }
+    100% { transform: rotate(0deg); }
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
