Fix images aspect ratio

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -164,6 +164,9 @@ p.warning {
 }
 
 .gallery li picture {
+    aspect-ratio: 2 / 3;
+    display: block;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
