--- a/public/css/app.css
+++ b/public/css/app.css
@@ -175,6 +175,20 @@ p.warning {
     padding: 0;
 }
 
+.gallery li picture.caption:after {
+    content: "Exclusive picture for our Patreons";
+    bottom: 2rem;
+    position: absolute;
+    line-height: 100%;
+    display: inline-block;
+    font-size: 1.5rem;
+    text-shadow: 0 0 0.5rem black;
+    box-sizing: border-box;
+    padding: 1rem;
+    text-align: center;
+    width: 100%;
+}
+
 .gallery li picture > * {
     width: 100%;
     border-radius: 2px;
